crates/test-ui/ui/ns_string_not_const.stderr
error[E0435]: attempt to use a non-constant value in a constant
 --> ui/ns_string_not_const.rs
  |
  |     let _ = ns_string!(s);
  |                        ^ non-constant value
  |
help: consider using `let` instead of `const`
 --> $WORKSPACE/framework-crates/objc2-foundation/src/macros/ns_string.rs
  |
  -         const INPUT: &str = $s;
  +         let INPUT: &str = $s;
  |
